# ctetris

./: CMakeLists.txt
src/: game.c  game.h  main.c
